Add Make!Sense extension to library
"Make!Sense is an easy plug and play board and sensor set that makes it simple to add sensors and physical computing to Scratch"

Created by Stephen Lewis, Deqing Sun, and Steven Holmes

--- a/index.html
+++ b/index.html
@@ -251,6 +251,23 @@
                             <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
                         </section>
                     </li>
+					<li>
+                        <a href="?url=http://creativecomputerlab.github.io/MakeSenseConnector-1.0.js" data-action="load-url">
+                            <header>
+                                <h2>Make!Sense</h2>
+                                <p class="author">Stephen Lewis, Deqing Sun, Steven Holmes</p>
+                            </header>
+                            <img src="images/extensions/makesense_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Sensor interface board and sensors</p>
+                            <a href="?url=http://creativecomputerlab.github.io/DataBufferAnalog.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://creativecomputerlab.com/makesense.html#datamodeinstructions" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
                     <li>
                         <a href="?url=http://MrYsLab.github.io/rb4s/rb4s.js" data-action="load-url">
                             <header>
