Add pointer lock ext.

--- a/index.html
+++ b/index.html
@@ -387,6 +387,22 @@
                             <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
                         </section>
                     </li>
+                    <li>
+                        <a href="?url=http://makerbox.net/scratchx-pointerlock/scripts.js" data-action="load-url">
+                            <header>
+                                <h2>Pointer Lock</h2>
+                                <p class="author">Kenta Hara</p>
+                            </header>
+                            <img src="images/extensions/pointer_lock_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Lock the pointer.</p>
+                            <!-- a href="?url=https://MrYsLab.github.io/blink.sbx" data-action="load-url">Sample Project</a-->
+                            <a href="http://makerbox.net/scratchx-pointerlock/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                        </section>
+                    </li>
                 </ul>
             </div>
         </section>
