--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                         </a>
                         <section class="description">
                             <p>Lock the pointer.</p>
-                            <!-- a href="?url=https://MrYsLab.github.io/blink.sbx" data-action="load-url">Sample Project</a-->
+                            <a href="?url=http://makerbox.net/scratchx-pointerlock/example.sbx" data-action="load-url">Sample Project</a-->
                             <a href="http://makerbox.net/scratchx-pointerlock/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
