--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div>
                     <div>
                         <h2 class="logo-scratchx">ScratchX</h2>
-                        <p>On the ScratchX website, you can play with Experimental Extensions to Scratch. Because these extensions are experimental and not enforsed or supported by the Scratch Team, they are available only on the ScratchX site, not the main Scratch site. <a href="#extensions">Try out ScratchX</a></p>
+                        <p>On the ScratchX website, you can play with Experimental Extensions to Scratch. Because these extensions are experimental and not endorsed or supported by the Scratch Team, they are available only on the ScratchX site, not the main Scratch site. <a href="#extensions">Try out ScratchX</a></p>
                     </div>
                 </div>
             </div></div>
