Add iRobot Create 2 extension to library

--- a/index.html
+++ b/index.html
@@ -201,6 +201,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="?url=https://irobotstem.github.io/CreateScratchX/roomba600Extension.js" data-action="load-url">
+                            <header>
+                                <h2>iRobot&reg; Create&reg; 2</h2>
+                                <p class="author">iRobot</p>
+                            </header>
+                            <img src="images/extensions/iRobot_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control iRobot&reg; Create&reg; 2</p>
+                            <a href="?url=http://irobotstem.github.io/CreateScratchX/examples/Create%20Example%20-%20Tethered%20Driving.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://irobotstem.github.io/CreateScratchX/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=https://khanning.github.io/scratch-isstracker-extension/iss_extension.js" data-action="load-url">
                             <header>
                                 <h2>ISS Tracker</h2>
