Add Arduino 101 to extension library

--- a/index.html
+++ b/index.html
@@ -149,7 +149,24 @@
                             <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
                         </section>
                     </li>
-					<li>
+                    <li>
+                        <a href="?url=https://llk.github.io/arduino-101/arduino101_serial_extension.js" data-action="load-url">
+                            <header>
+                                <h2>Arduino 101</h2>
+                                <p class="author">Kreg Hanning</p>
+                            </header>
+                            <img src="images/extensions/arduino101_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control Arduino/Genuino 101 boards</p>
+                            <a href="?url=https://llk.github.io/arduino-101/examples/Blink.sbx" data-action="load-url">Sample Project</a>
+                            <a href="https://llk.github.io/arduino-101/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=http://kaspesla.github.io/ev3_scratch/ev3_scratch.js" data-action="load-url">
                             <header>
                                 <h2>EV3+Scratch</h2>
