--- a/index.html
+++ b/index.html
@@ -405,6 +405,40 @@
                         </section>
                     </li>
                     <li>
+                        <a href="?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/go_motion_extension.js" data-action="load-url">
+                            <header>
+                                <h2>Vernier Go!Motion</h2>
+                                <p class="author">Vernier Software & Technology</p>
+                            </header>
+                            <img src="images/extensions/gomotion_small.jpg" />
+                        </a>
+                        <section class="description">
+                            <p>Use position data in Scratch</p>
+                            <a href="?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/SayMotion.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/go_temp_extension.js" data-action="load-url">
+                            <header>
+                                <h2>Vernier Go!Temp</h2>
+                                <p class="author">Vernier Software & Technology</p>
+                            </header>
+                            <img src="images/extensions/gotemp_small.jpg" />
+                        </a>
+                        <section class="description">
+                            <p>Use temperature data in Scratch</p>
+                            <a href="?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/SayTemp.sbx" data-action="load-url">Sample Project</a>
+                            <a href="http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=https://MrYsLab.github.io/xi4s.js" data-action="load-url">
                             <header>
                                 <h2>Xi - Multi uC Interconnect</h2>
