Update scratch_extensions, support Device Manager

--- a/index.html
+++ b/index.html
@@ -680,6 +680,7 @@
 <script type="text/javascript" src="scratch_extensions/scratch_proxies.js" defer></script>
 <script type="text/javascript" src="scratch_extensions/scratch_plugin.js" defer></script>
 <script type="text/javascript" src="scratch_extensions/scratch_nmh.js" defer></script>
+<script type="text/javascript" src="scratch_extensions/scratch_deviceManager.js" defer></script>
 <script type="text/javascript" src="scratch_extensions/scratch_ext.js" defer></script>
 </body>
 </html>
