--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
 <script type="text/javascript" src="libs/base64ab.js" async></script>
 <script type="text/javascript" src="libs/swfobject.js"></script>
 <script type="text/javascript" src="libs/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="libs/socket.io-1.3.7.js"></script>
 <script type="text/javascript" src="libs/underscore-min.js" async></script>
 <script type="text/javascript" src="libs/ZeroClipboard.min.js" async></script>
 <script type="text/javascript" src="js/scratchx.js" defer></script>
