--- a/index.html
+++ b/index.html
@@ -439,6 +439,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="?url=https://khanning.github.io/scratch-weather-extension/weather_extension.js" data-action="load-url">
+                            <header>
+                                <h2>Weather</h2>
+                                <p class="author">Sayamindu Dasgupta, Kreg Hanning</p>
+                            </header>
+                            <img src="images/extensions/weather_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Access live weather information</p>
+                            <a href="?url=https://khanning.github.io/scratch-weather-extension/examples/WeatherExample.sbx" data-action="load-url">Sample Project</a>
+                            <a href="https://khanning.github.io/scratch-weather-extension/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=https://MrYsLab.github.io/xi4s.js" data-action="load-url">
                             <header>
                                 <h2>Xi - Multi uC Interconnect</h2>
