changing synth ext example to gobo in space

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/examples/Bouncing%20Synth%20Ball.sbx" data-action="load-url">
+                    <a href="?url=https://ericrosenbaum.github.io/tone-synth-extension/examples/Gobo%20In%20Space.sbx" data-action="load-url">
                         <img src="images/extensions/synth-extension-sm.png" />
                         <section>
                             <h2>Sound Synthesizer</h2>
@@ -363,7 +363,7 @@
                         </a>
                         <section class="description">
                             <p>Synthesize sound effects and music</p>
-                            <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/examples/Bouncing%20Synth%20Ball.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://ericrosenbaum.github.io/tone-synth-extension/examples/Gobo%20In%20Space.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://ericrosenbaum.github.io/tone-synth-extension" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
