Fix GH-103: Create SWF regardless of platform
Port LLK/scratchr2#4168 for ScratchX.

Original description from that change:
> This fixes #4112 by creating the swf regardless of OS and browser.
> Calling `embedSWF` would first check for the existence of the plugin
> before creating, causing browsers that don’t allow the flash plugin by
> default to not be able to show their “allow” message. This tries to
> create the swf no matter what, allowing browsers to detect flash
> themselves.
>
> Logic is as follows:
> 1. check if `userAgent` returns a mobile/tablet OS. Display error
>    message if so
> 2. check if on windows and using ie – check for an express install if
>    so (like in `embedSWF`)
> 3. load the swf in all other cases, let browsers handle it.
>
> Test Cases:
> - Test how project pages load in Android and iOS devices, on tablets
>   and on phones, and on multiple desktop OS's for correct loading
>   behavior.

This resolves LLK/scratchx#103

--- a/index.html
+++ b/index.html
@@ -689,6 +689,7 @@
   ga('send', 'pageview', 'home');
 </script>
 <script type="text/javascript" src="libs/base64ab.js" async></script>
+<script type="text/javascript" src="libs/bowser.min.js"></script>
 <script type="text/javascript" src="libs/swfobject.js"></script>
 <script type="text/javascript" src="libs/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="libs/socket.io-1.3.7.js"></script>
