Add spotify extension

--- a/index.html
+++ b/index.html
@@ -371,6 +371,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="https://ericrosenbaum.github.io/spotify-extension/" target="_blank">
+                            <header>
+                                <h2>Spotify Music</h2>
+                                <p class="author">Eric Rosenbaum</p>
+                            </header>
+                            <img src="images/extensions/spotify_large.png" />
+                        </a>
+                        <section class="description">
+                            <p>Animate and remix millions of songs!</p>
+                            <a href="?url=https://ericrosenbaum.github.io/spotify-extension/examples/dance-party.sbx#scratch" data-action="load-url">Sample Project</a>
+                            <a href="https://ericrosenbaum.github.io/spotify-extension/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag web" title="Web Extension">Requires Internet Connection</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=http://sayamindu.github.io/scratch-extensions/text-to-speech/text_to_speech_extension.js" data-action="load-url">
                             <header>
                                 <h2>Text to Speech</h2>
