Add micro:bit extension to gallery

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
                         </section>
                     </li>
-					<li>
+                    <li>
                         <a href="?url=http://creativecomputerlab.github.io/MakeSenseConnector-1.0.js" data-action="load-url">
                             <header>
                                 <h2>Make!Sense</h2>
@@ -314,6 +314,23 @@
                             <p>Sensor interface board and sensors</p>
                             <a href="?url=http://creativecomputerlab.github.io/DataBufferAnalog.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://creativecomputerlab.com/makesense.html#datamodeinstructions" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=https://llk.github.io/microbit-extension/microbit_extension.js" data-action="load-url">
+                            <header>
+                                <h2>micro:bit</h2>
+                                <p class="author">Scratch Team</p>
+                            </header>
+                            <img src="images/extensions/microbit_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control micro:bit over bluetooth</p>
+                            <a href="?url=https://llk.github.io/microbit-extension/examples/Button.sbx" data-action="load-url">Sample Project</a>
+                            <a href="https://llk.github.io/microbit-extension" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
                             <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
