Update featured projects

--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
 
             <ul class="featured-extensions">
                 <li class="featured-extension">
-                    <a href="?url=http://technoboy10.tk/twitter/examples/Fetch%20a%20Tweet.sbx" data-action="load-url">
-                        <img src="images/extensions/twitter-extension-sm.png" />
+                    <a href="?url=https://ericrosenbaum.github.io/spotify-extension/examples/dance-party.sbx" data-action="load-url">
+                        <img src="images/extensions/spotify_large.png" />
                         <section>
-                            <h2>Twitter</h2>
-                            <p class="author">Connor Hudson, Kreg Hanning</p>
+                            <h2>Spotify</h2>
+                            <p class="author">Eric Rosenbaum</p>
                         </section>
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=https://ericrosenbaum.github.io/tone-synth-extension/examples/Gobo%20In%20Space.sbx" data-action="load-url">
-                        <img src="images/extensions/synth-extension-sm.png" />
+                    <a href="?url=https://llk.github.io/microbit-extension/examples/Button.sbx" data-action="load-url">
+                        <img src="images/extensions/microbit_small.png" />
                         <section>
-                            <h2>Sound Synthesizer</h2>
-                            <p class="author">Eric Rosenbaum</p>
+                            <h2>micro:bit</h2>
+                            <p class="author">Scratch Team</p>
                         </section>
                     </a>
                 </li>
