Spotify extension link points to docs page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <ul class="featured-extensions">
                 <li class="featured-extension">
-                    <a href="?url=https://ericrosenbaum.github.io/spotify-extension/examples/dance-party.sbx" data-action="load-url">
+                    <a href="https://ericrosenbaum.github.io/spotify-extension/">
                         <img src="images/extensions/spotify_large.png" />
                         <section>
                             <h2>Spotify</h2>
