micro:bit extension link points to docs page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="?url=https://llk.github.io/microbit-extension/examples/Button.sbx" data-action="load-url">
+                    <a href="https://llk.github.io/microbit-extension/" data-action="load-url">
                         <img src="images/extensions/microbit_small.png" />
                         <section>
                             <h2>micro:bit</h2>
