Remove action from micro:bit and Arduino links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="https://llk.github.io/microbit-extension/" data-action="load-url">
+                    <a href="https://llk.github.io/microbit-extension/">
                         <img src="images/extensions/microbit_small.png" />
                         <section>
                             <h2>micro:bit</h2>
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="https://khanning.github.io/scratch-arduino-extension/" data-action="load-url">
+                    <a href="https://khanning.github.io/scratch-arduino-extension/">
                         <img src="images/extensions/arduino_small.png" />
                         <section>
                             <h2>Arduino</h2>
