Update micro:bit author

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <img src="images/extensions/microbit_small.png" />
                         <section>
                             <h2>micro:bit</h2>
-                            <p class="author">Scratch Team</p>
+                            <p class="author">Kreg Hanning</p>
                         </section>
                     </a>
                 </li>
@@ -323,7 +323,7 @@
                         <a href="?url=https://llk.github.io/microbit-extension/microbit_extension.js" data-action="load-url">
                             <header>
                                 <h2>micro:bit</h2>
-                                <p class="author">Scratch Team</p>
+                                <p class="author">Kreg Hanning</p>
                             </header>
                             <img src="images/extensions/microbit_small.png" />
                         </a>
