Add poppy extension

--- a/index.html
+++ b/index.html
@@ -337,6 +337,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="https://eesh.github.io/scratch-test/">
+                            <header>
+                                <h2>Poppy Ergo Jr.</h2>
+                                <p class="author">Stefania Druga &amp; Eesh Likhith</p>
+                            </header>
+                            <img src="images/extensions/poppy_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control the Poppy Ergo Jr. robot</p>
+                            <a href="?url=https://eesh.github.io/scratch-test/examples/record_playback.sbx" data-action="load-url">Sample Project</a>
+                            <a href="https://eesh.github.io/scratch-test/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=http://MrYsLab.github.io/rb4s/rb4s.js" data-action="load-url">
                             <header>
                                 <h2>rb4s – A Controller For The RedBot</h2>
