Add Robotec EV3 extension

--- a/index.html
+++ b/index.html
@@ -303,6 +303,23 @@
                         </section>
                     </li>
                     <li>
+                        <a href="?url=https://Robotec-CoderZ.github.io/he.js" data-action="load-url">
+                            <header>
+                                <h2>LEGO Education EV3</h2>
+                                <p class="author">Robotec Israel</p>
+                            </header>
+                            <img src="images/extensions/robotec_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control LEGO EV3 - USB version (Hebrew)</p>
+                            <a href="?url=https://Robotec-CoderZ.github.io/he-example.sbx" data-action="load-url">Sample Project</a>
+                            <a href="https://robotec-coderz.github.io/index.html">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
                         <a href="?url=http://khanning.github.io/scratch-littlebits-extension/littlebits_extension.js" data-action="load-url">
                             <header>
                                 <h2>littleBits</h2>
