Update robotec extension name

--- a/index.html
+++ b/index.html
@@ -184,23 +184,6 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://Robotec-CoderZ.github.io/he.js" data-action="load-url">
-                            <header>
-                                <h2>EV3 LEGO Education</h2>
-                                <p class="author">Robotec Israel</p>
-                            </header>
-                            <img src="images/extensions/robotec_small.png" />
-                        </a>
-                        <section class="description">
-                            <p>Control LEGO EV3 - USB version (Hebrew)</p>
-                            <a href="?url=https://Robotec-CoderZ.github.io/he-example.sbx" data-action="load-url">Sample Project</a>
-                            <a href="https://robotec-coderz.github.io/index.html">Documentation</a>
-                        </section>
-                        <section class="tags">
-                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
-                        </section>
-                    </li>
-                    <li>
                         <a href="?url=http://kaspesla.github.io/ev3_scratch/ev3_scratch.js" data-action="load-url">
                             <header>
                                 <h2>EV3+Scratch</h2>
@@ -212,6 +195,23 @@
                             <p>Control LEGO EV3 robots wirelessly</p>
                             <a href="?url=http://kaspesla.github.io/ev3_scratch/examples/avoid%20obstacles%20example.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://kaspesla.github.io/ev3_scratch/" target="_blank">Documentation</a>
+                        </section>
+                        <section class="tags">
+                            <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
+                        </section>
+                    </li>
+                    <li>
+                        <a href="?url=https://Robotec-CoderZ.github.io/he.js" data-action="load-url">
+                            <header>
+                                <h2>EV3+Scratch (Hebrew Version)</h2>
+                                <p class="author">Robotec Israel</p>
+                            </header>
+                            <img src="images/extensions/robotec_small.png" />
+                        </a>
+                        <section class="description">
+                            <p>Control LEGO EV3 over USB (Hebrew)</p>
+                            <a href="?url=https://Robotec-CoderZ.github.io/he-example.sbx" data-action="load-url">Sample Project</a>
+                            <a href="https://robotec-coderz.github.io/index.html">Documentation</a>
                         </section>
                         <section class="tags">
                             <span class="tag hardware" title="Hardware Extension">Requires Hardware</span>
