Adding a alt attribute to every homepage extension

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul class="featured-extensions">
                 <li class="featured-extension">
                     <a href="https://ericrosenbaum.github.io/spotify-extension/">
-                        <img src="images/extensions/spotify_large.png" />
+                        <img src="images/extensions/spotify_large.png" alt="Spotify Thumbnail" />
                         <section>
                             <h2>Spotify</h2>
                             <p class="author">Eric Rosenbaum</p>
@@ -46,7 +46,7 @@
                 </li>
                 <li class="featured-extension">
                     <a href="https://llk.github.io/microbit-extension/">
-                        <img src="images/extensions/microbit_small.png" />
+                        <img src="images/extensions/microbit_small.png" alt="micro:bit Thumbnail" />
                         <section>
                             <h2>micro:bit</h2>
                             <p class="author">Kreg Hanning</p>
@@ -55,7 +55,7 @@
                 </li>
                 <li class="featured-extension">
                     <a href="?url=http://scratchx.org/tmp/TalkingGobo.sbx" data-action="load-url">
-                        <img src="images/extensions/text-extension-sm.png" />
+                        <img src="images/extensions/text-extension-sm.png" alt="Text To Speach Thumbnail" />
                         <section>
                             <h2>Text to Speech</h2>
                             <p class="author">Sayamindu Dasgupta</p>
@@ -64,7 +64,7 @@
                 </li>
                 <li class="featured-extension">
                     <a href="https://khanning.github.io/scratch-arduino-extension/">
-                        <img src="images/extensions/arduino_small.png" />
+                        <img src="images/extensions/arduino_small.png" alt="Arduino Thumbnail" />
                         <section>
                             <h2>Arduino</h2>
                             <p class="author">Kreg Hanning, David Mellis</p>
