Change scratch domain to https

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div>
                     <div>
                         <h2 class="logo-scratch">Scratch</h2>
-                        <p>With the Scratch programming language, you can create your own interactive stories, games, and animations &mdash; and share your creations with others in an online community. <a href="http://scratch.mit.edu">Take me to Scratch</a></p>
+                        <p>With the Scratch programming language, you can create your own interactive stories, games, and animations &mdash; and share your creations with others in an online community. <a href="https://scratch.mit.edu">Take me to Scratch</a></p>
                     </div>
                 </div>
                 <div>
