change to & to  &amp; in an author heading

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                         <a href="?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/go_temp_extension.js" data-action="load-url">
                             <header>
                                 <h2>Vernier Go!Temp</h2>
-                                <p class="author">Vernier Software & Technology</p>
+                                <p class="author">Vernier Software &amp; Technology</p>
                             </header>
                             <img src="images/extensions/gotemp_small.jpg" alt="Vernier Go!Temp" />
                         </a>
