Change to Intel RealSense

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                 <h2>Intel&reg; RealSense&trade;</h2>
                                 <p class="author">Shachar Oz, Yaron Yanai, Yotam Salmon</p>
                             </header>
-                            <img src="images/extensions/realsense_small.png" alt="ischertechnik robots" />
+                            <img src="images/extensions/realsense_small.png" alt="Intel RealSense" />
                         </a>
                         <section class="description">
                             <p>Hand Gestures, face tracking, voice commands</p>
